syntax = "proto3";

package user;
option go_package="./userpb";

message UserRequest{
    int64 id = 1;
}

message UserListRequest{
    repeated int64 ids = 1;
}

message UserResponse{
    int64 id = 1;
    string fname = 2;
    string city = 3;
    string phone = 4;
    float height = 5;
    bool married = 6;
}

message UserListResponse {
    repeated UserResponse users = 1;
}

service UserService {
    rpc GetSingleUsers(UserRequest) returns (UserResponse) {};
    rpc GetManyUsers(UserListRequest) returns (UserListResponse) {}; 
}